Ability to intercept custom protocol URLs while opening application from web browser, important for jetbrains gateway
(cherry picked from commit b82485224c821bfb81eca92c79c47bea1520a310)

IJ-MR-11207

GitOrigin-RevId: 9e39a141adf11776f099dbc208e8b0731de5c9a9